# smolder

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: bench-smoke.yml  interop-samba.yml  interop-windows-self-hosted.yml
demos/smolder-core-demo/: Cargo.toml
demos/smolder-core-demo/src/: main.rs
docker/cross/: Dockerfile.aarch64-pc-windows-gnullvm  Dockerfile.x86_64-pc-windows-gnu
docker/samba/: compose.yaml
docker/samba-ad/: compose.yaml
docker/samba-ad/dc/: Dockerfile  bootstrap.sh
docker/samba-ad/member/: Dockerfile  bootstrap.sh
docker/samba-quic/: Dockerfile  bootstrap.sh  compose.yaml
docker/samba/data/: config.yml  encrypted-share.conf
docker/samba/data-global-encryption/: config.yml
docker/samba/data-netbios/: config.yml
docs/guide/: cookbook.md  core-sessions.md  examples.md  kerberos.md  named-pipes-and-rpc.md  remote-exec.md  tools-file-workflows.md
docs/reference/: smolder-core-api.md  support-policy.md  versioning-policy.md  why-smolder.md
docs/testing/: benchmarks.md  fuzzing.md  interop.md  release.md  samba-ad-kerberos.md  samba-quic-utm.md  samba-quic.md  samba-rpc.md  samba.md  windows-kerberos.md  windows-quic-apple-silicon.md  windows-quic-provisioning.md  windows-quic.md  windows-runner.md  windows.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: netbios_session_message.rs  rpc_packet.rs  smb2_decode_surface.rs
plans/: idiomatic-rust-smb-rewrite.md  kerberos-auth-roadmap.md  library-and-security-roadmap.md  smolder-core-library-roadmap.md
scripts/: configure-samba-quic-utm.sh  configure-windows-quic-server.ps1  dispatch-windows-interop.sh  ensure-tiny11-smb-forward.sh  fetch-windows-server-arm64-uup.sh  join-tiny11-to-samba-ad.sh  prepare-samba-ad-fixture.sh  prepare-samba-fixture.sh  provision-samba-quic-utm.sh  provision-windows-quic-vm.sh  run-interop.sh  run-kerberos-interop.sh  run-samba-quic-interop.sh  run-samba-rpc-interop.sh  run-windows-kerberos-interop.sh  run-windows-quic-interop.sh  run-windows-release-gate.sh  setup-samba-quic-guest.sh  setup-windows-self-hosted-runner.sh
smolder-core/: Cargo.toml  README.md
smolder-core/benches/: crypto_paths.rs
smolder-core/examples/: client_file_roundtrip.rs  client_lsarpc.rs  client_netbios_session_connect.rs  client_quic_session_connect.rs  client_rpc_bind.rs  client_samr_alias_info.rs  client_session_connect.rs  client_share_list.rs  client_srvsvc.rs  client_srvsvc_sessions.rs  core_file_roundtrip.rs  kerberos_tree_connect.rs  named_pipe_rpc_bind.rs  ntlm_tree_connect.rs
smolder-core/examples/common/: mod.rs
smolder-core/src/: client.rs  compression.rs  crypto.rs  dfs.rs  error.rs  facade.rs  fs.rs  lib.rs  lsarpc.rs  pipe.rs  remote_exec.rs  rpc.rs  samr.rs  srvsvc.rs  transport.rs
smolder-core/src/auth/: kerberos.rs  kerberos_gssapi.rs  kerberos_spn.rs  kerberos_sspi.rs  mod.rs  ntlm.rs  ntlm_rpc.rs  ntlm_rpc_bind.rs  spnego.rs
smolder-core/src/client/: helpers.rs  state.rs
smolder-core/tests/: client_file_facade.rs  durable_handles.rs  kerberos_interop.rs  lsarpc_interop.rs  named_pipe_interop.rs  rpc_interop.rs  samba_compression.rs  samba_encryption.rs  samba_high_level.rs  samba_lsarpc_interop.rs  samba_negotiate.rs  samba_netbios.rs  samba_quic.rs  samba_rpc_encryption.rs  samba_samr_interop.rs  samba_samr_standalone_interop.rs  samr_interop.rs  windows_compression.rs  windows_encryption.rs  windows_interop.rs  windows_quic.rs  windows_reconnect.rs  windows_rpc_encryption.rs
smolder-core/tests/common/: mod.rs
smolder-proto/: Cargo.toml  README.md
smolder-proto/benches/: decode_paths.rs
smolder-proto/src/: lib.rs  smb.rs
smolder-proto/src/rpc/: mod.rs
smolder-proto/src/smb/: compression.rs  error.rs  mod.rs  netbios.rs  status.rs  transform.rs
smolder-proto/src/smb/smb2/: cancel.rs  create.rs  echo.rs  header.rs  info.rs  io.rs  ioctl.rs  lock.rs  mod.rs  negotiate.rs  notify.rs  session.rs  tree.rs
smolder-proto/tests/: property_codecs.rs
smolder-psexecsvc/: Cargo.toml  README.md
smolder-psexecsvc/src/: lib.rs  main.rs
smolder-tools/: Cargo.toml  README.md
smolder-tools/examples/: file_roundtrip.rs  interactive_psexec.rs  kerberos_share_list.rs
smolder-tools/examples/common/: mod.rs
smolder-tools/src/: fs.rs  lib.rs  main.rs  reconnect.rs  remote_exec.rs
smolder-tools/src/cli/: common.rs  file_tools.rs  mod.rs  remote_exec_tools.rs
smolder-tools/src/fs/: implementation.rs
smolder-tools/src/fs/implementation/: open_options.rs  remote_file.rs  share_helpers.rs
smolder-tools/src/remote_exec/: admin_share.rs  command_support.rs  scmr_support.rs
smolder-tools/tests/: cli_smoke.rs  samba_high_level.rs  windows_dfs.rs  windows_encryption.rs  windows_reconnect.rs
smolder-tools/tests/common/: mod.rs
