[package]
name = "smolder-smb-core"
version = "0.1.0"
edition = "2021"
authors = ["M00NLIG7"]
description = "SMB/RPC protocol, transport, and session primitives for Smolder"
repository = "https://github.com/M00NLIG7/smolder"
documentation = "https://docs.rs/smolder-smb-core"
license = "MIT"
readme = "README.md"
keywords = ["smb", "smb2", "rpc", "ntlm"]
categories = ["network-programming"]

[lib]
name = "smolder_core"
path = "src/lib.rs"

[[example]]
name = "kerberos_tree_connect"
required-features = ["kerberos"]

[features]
default = []
kerberos = ["kerberos-sspi"]
kerberos-sspi = ["dep:sspi"]
kerberos-gssapi = ["kerberos", "dep:kenobi-unix"]

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
async-trait = "0.1"
bitflags = "2"
bytes = "1"
ccm = "0.5"
cmac = "0.7"
hmac = "0.12"
md-5 = "0.10"
md4 = "0.10"
rand = "0.8"
sha2 = "0.10"
smolder-proto = { path = "../smolder-proto", version = "0.1.0" }
sspi = { version = "0.19.2", optional = true, default-features = false, features = ["network_client", "ring"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt", "sync", "time"] }
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
kenobi-unix = { version = "0.2.0", optional = true }
