[package]
name = "smolder-smb-core"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
authors = ["M00NLIG7"]
description = "Typed SMB2/3 and RPC client primitives with auth, compression, QUIC, and RPC support"
repository = "https://github.com/M00NLIG7/smolder"
documentation = "https://docs.rs/smolder-smb-core"
license = "MIT"
readme = "README.md"
keywords = ["smb", "smb2", "rpc", "ntlm"]
categories = ["network-programming"]

[lib]
name = "smolder_core"
path = "src/lib.rs"

[package.metadata.docs.rs]
no-default-features = true
features = ["kerberos", "quic"]
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "kerberos_tree_connect"
required-features = ["kerberos"]

[[example]]
name = "client_quic_session_connect"
required-features = ["quic"]

[features]
default = []
kerberos = ["kerberos-api", "kerberos-sspi"]
kerberos-api = []
kerberos-sspi = ["kerberos-api", "dep:sspi"]
kerberos-gssapi = ["kerberos-api", "dep:kenobi-unix"]
quic = [
    "dep:quinn",
    "dep:quinn-proto",
    "dep:rustls",
    "dep:rustls-native-certs",
]

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
async-trait = "0.1"
bitflags = "2"
bytes = "1"
ccm = "0.5"
cmac = "0.7"
hmac = "0.12"
md-5 = "0.10"
md4 = "0.10"
rand = "0.8"
lznt1 = "0.1"
quinn = { version = "0.11.9", optional = true, default-features = false, features = ["runtime-tokio", "rustls-ring"] }
quinn-proto = { version = "0.11.14", optional = true, default-features = false, features = ["rustls-ring"] }
rust-lzxpress = "0.7"
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "ring"] }
rustls-native-certs = { version = "0.8.3", optional = true }
sha2 = "0.10"
smolder-proto = { path = "../smolder-proto", version = "0.2.0" }
sspi = { version = "0.19.2", optional = true, default-features = false, features = ["network_client", "ring"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt", "sync", "time"] }
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
kenobi-unix = { version = "0.2.0", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "crypto_paths"
harness = false
