[package]
name = "smolder-proto"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["M00NLIG7"]
description = "Typed SMB2/3 and DCE/RPC wire codecs for Smolder"
repository = "https://github.com/M00NLIG7/smolder"
documentation = "https://docs.rs/smolder-proto"
license = "MIT"
readme = "README.md"
keywords = ["smb", "smb2", "rpc", "protocol"]
categories = ["encoding", "network-programming"]

[dependencies]
bitflags = "2"
bytes = "1"
thiserror = "2"

[dev-dependencies]
criterion = "0.5"
proptest = "1"

[[bench]]
name = "decode_paths"
harness = false
