[package]
name = "smolder-tools"
version = "0.1.0"
edition = "2021"
authors = ["M00NLIG7"]
description = "CLI tools and high-level operator workflows for Smolder"
repository = "https://github.com/M00NLIG7/smolder"
license = "MIT"

[[bin]]
name = "smolder"
path = "src/main.rs"

[dependencies]
bytes = "1"
rand = "0.8"
smolder-core = { path = "../smolder-core" }
smolder-proto = { path = "../smolder-proto" }
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "rt", "sync", "time"] }

[dev-dependencies]
async-trait = "0.1"
