[package]
name = "smolder"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["M00NLIG7"]
description = "CLI tools and high-level operator workflows for Smolder"
repository = "https://github.com/M00NLIG7/smolder"
documentation = "https://docs.rs/smolder"
license = "MIT"
readme = "README.md"
keywords = ["smb", "smb2", "rpc", "cli"]
categories = ["command-line-utilities", "network-programming"]
default-run = "smolder"

[lib]
name = "smolder_tools"
path = "src/lib.rs"

[package.metadata.docs.rs]
no-default-features = true
features = ["kerberos"]
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "smolder"
path = "src/main.rs"

[features]
default = []
kerberos = ["smolder-core/kerberos"]

[dependencies]
bytes = "1"
rand = "0.8"
smolder-core = { package = "smolder-smb-core", path = "../smolder-core", version = "0.1.0" }
smolder-proto = { path = "../smolder-proto", version = "0.1.0" }
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "rt", "sync", "time"] }

[dev-dependencies]
async-trait = "0.1"
